unpackaged/main/default/objects/Mobile_Notification_Event__e/Mobile_Notification_Event__e.object-meta.xml
<CustomObject>
    <description>Publish an event that captures the assigned resource insert or update, and creates sharing/subscription based on the condition.</description>
    <label>Mobile Notification Event</label>
    <pluralLabel>Mobile Notification Events</pluralLabel>
</CustomObject>