unpackaged/main/default/objects/Mobile_Notification_Event__e/fields/Address_Changed__c.field-meta.xml
<CustomField>
    <fullName>Address_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the address of the SA changed</description>
    <label>Address Changed</label>
    <type>Checkbox</type>
</CustomField>