unpackaged/main/default/objects/Mobile_Notification_Event__e/fields/Breakdown_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Appointment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean is selected if the appointment is a breakdown appointment</description>
    <label>Breakdown Appointment</label>
    <type>Checkbox</type>
</CustomField>