unpackaged/main/default/objects/Mobile_Notification_Event__e/fields/Current_Service_Territory_Id__c.field-meta.xml
<CustomField>
    <fullName>Current_Service_Territory_Id__c</fullName>
    <description>Id of current Service_Territory</description>
    <label>Current Service Territory Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>