unpackaged/main/default/objects/Mobile_Notification_Event__e/fields/Current_SR_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Current_SR_User_Id__c</fullName>
    <description>The user ID associated to the current assigned SR</description>
    <label>Current SR User Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>