unpackaged/main/default/objects/Mobile_Notification_Event__e/fields/Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Status__c</fullName>
    <description>Service Appointment Status at the time of the event</description>
    <label>Current Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>