unpackaged/main/default/objects/Mobile_Notification_Event__e/fields/New_Address__c.field-meta.xml
<CustomField>
    <fullName>New_Address__c</fullName>
    <label>New Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>