unpackaged/main/default/objects/Mobile_Notification_Event__e/fields/New_Service_Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>New_Service_Resource_Id__c</fullName>
    <label>New Service Resource Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>