unpackaged/main/default/objects/Mobile_Notification_Event__e/fields/Old_Address__c.field-meta.xml
<CustomField>
    <fullName>Old_Address__c</fullName>
    <label>Old Address</label>
    <length>150</length>
    <type>Text</type>
</CustomField>