unpackaged/main/default/objects/Mobile_Notification_Event__e/fields/Old_Service_Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Service_Resource_Id__c</fullName>
    <description>Id of previously assigned service resource</description>
    <label>Old Service Resource Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>