unpackaged/main/default/objects/Mobile_Notification_Event__e/fields/Previous_Service_Territory_Id__c.field-meta.xml
<CustomField>
    <fullName>Previous_Service_Territory_Id__c</fullName>
    <description>Id of previous Service Territory</description>
    <label>Previous Service Territory Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>