unpackaged/main/default/objects/Mobile_Notification_Event__e/fields/Previous_SR_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Previous_SR_User_Id__c</fullName>
    <description>Id of the User related to the previous SR assigned</description>
    <label>Previous SR User Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>