unpackaged/main/default/objects/Mobile_Notification_Event__e/fields/Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Status__c</fullName>
    <description>Previous status</description>
    <label>Previous Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>