unpackaged/main/default/objects/Mobile_Notification_Event__e/fields/Rescheduled__c.field-meta.xml
<CustomField>
    <fullName>Rescheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did a reassignment of SA happen</description>
    <label>Rescheduled</label>
    <type>Checkbox</type>
</CustomField>