unpackaged/main/default/objects/Mobile_Notification_Event__e/fields/Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Scheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did new SA assignment happen</description>
    <label>Scheduled</label>
    <type>Checkbox</type>
</CustomField>