unpackaged/main/default/objects/Mobile_Notification_Event__e/fields/Service_Appointment_Id__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Id__c</fullName>
    <description>Service Appointment where resource changed or status was updated</description>
    <label>Service Appointment Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>