unpackaged/main/default/objects/Mobile_Notification_Event__e/fields/Service_Territory_Changed__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Upon reassignment did the Service Territory Change</description>
    <label>Service Territory Changed</label>
    <type>Checkbox</type>
</CustomField>