unpackaged/main/default/objects/Mobile_Notification_Event__e/fields/Status_Updated__c.field-meta.xml
<CustomField>
    <fullName>Status_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if status was updated, causing this event</description>
    <label>Status Updated</label>
    <type>Checkbox</type>
</CustomField>