unpackaged/main/default/objects/Mobile_Notification_Event__e/fields/Unscheduled__c.field-meta.xml
<CustomField>
    <fullName>Unscheduled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the call is unscheduled</description>
    <label>Unscheduled</label>
    <type>Checkbox</type>
</CustomField>